--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,10 @@ input[type="checkbox"]:checked::before {
    
 }
 
-
+.status-bar p, .status ul, .clear {
+    padding: 0 20px;
+    cursor: pointer;
+}
 .status ul, .status ul li a {
     display: flex;
     text-decoration: none;
@@ -196,18 +199,13 @@ input[type="checkbox"]:checked::before {
     color: var(--hover-color)
 }
 
-.clear {
-    cursor: pointer;
-}
-
 .status-bar .clear:hover,.status-bar .clear:active  {
     color: var(--primary-text-color);
 }
 
-.status.mobile, .drag-drop, .status-bar {
+.status.mobile, .drag-drop{
     display: none;
 }
-
 
 /* Dynamic Sytles */
 .complete {
